fix: overflow-x hidden added to home-page

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -175,7 +175,6 @@ svg {
   display: flex;
   align-items: center;
   font-size: 16px;
-  font-weight: 600;
   margin-right: 40px;
 }
 .header .hamburger-menu {
@@ -211,6 +210,11 @@ svg {
 }
 .footer .link-group {
   padding: 40px 180px;
+}
+@media (max-width: 1000px) {
+  .footer .link-group {
+    padding: 10px 20px;
+  }
 }
 .footer .link-group a {
   color: var(--white);
@@ -304,6 +308,7 @@ svg {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 .home-page .section-text {
   display: flex;
@@ -346,10 +351,10 @@ svg {
   }
 }
 .home-page .manifest-section .manifest-text {
+  width: 60%;
   margin-right: 32px;
   font-size: 48px;
   font-weight: 600;
-  width: 45%;
   background: linear-gradient(to right, #ff6b00 0, #7f52ca 50%, #7f52ca 10%);
   background-position: 0;
   -webkit-background-clip: text;
@@ -432,7 +437,7 @@ svg {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 140px;
+  height: auto;
   margin-right: 20px;
   padding: 20px 25px;
   margin-bottom: 64px;
@@ -457,7 +462,6 @@ svg {
 }
 .home-page .how-section .how-box .how-box--group .how-box--title {
   font-size: 22px;
-  font-weight: 600;
 }
 .home-page .how-section .how-box .how-box--group .how-box--desc {
   color: var(--notActive);
