--- a/src/assets/stylus/Layout/footer.styl
+++ b/src/assets/stylus/Layout/footer.styl
@@ -13,6 +13,8 @@
         align-items center
     .link-group
         padding 40px 180px
+        @media (max-width: 1000px)
+            padding 10px 20px
         a
             color var(--white)
             font-size 18px
