--- a/src/assets/stylus/Layout/header.styl
+++ b/src/assets/stylus/Layout/header.styl
@@ -34,7 +34,6 @@
             display flex
             align-items center
             font-size 16px
-            font-weight 600
             margin-right 40px
     .hamburger-menu
         visibility visible
